--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
   <string name="app_name">We The People</string>
+  <string name="title_activity_saved_laws">SavedLaws</string>
+  <string name="tab_text_1">Tab 1</string>
+  <string name="tab_text_2">Tab 2</string>
+  <string name="title_activity_home_page">HomePage</string>
+  <string name="title_activity_home_screen">MainActivity</string>
+  <string name="title_home">Home</string>
+  <string name="title_saved">Dashboard</string>
+  <string name="title_search">Notifications</string>
 </resources>
