--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
   <string name="title_activity_home_page">HomePage</string>
   <string name="title_activity_home_screen">MainActivity</string>
   <string name="title_home">Home</string>
-  <string name="title_saved">Dashboard</string>
-  <string name="title_search">Notifications</string>
+  <string name="title_saved">Saved</string>
+  <string name="title_search">Search</string>
 </resources>
