--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
   <string name="title_home">Home</string>
   <string name="title_saved">Saved</string>
   <string name="title_search">Search</string>
+  <string name="save_item">save item</string>
 </resources>
