--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
   <string name="title_saved">Saved</string>
   <string name="title_search">Search</string>
   <string name="save_item">save item</string>
+  <string name="label_home">Random Regulation</string>
+  <string name="date_label">Last Modified: %s</string>
+
 </resources>
